--- a/src/components/MainContent/MainContentMentors/MainContentMentorsList/MainContentMentorsListInstructor/MainContentMentorsListInstructor.css
+++ b/src/components/MainContent/MainContentMentors/MainContentMentorsList/MainContentMentorsListInstructor/MainContentMentorsListInstructor.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     gap: 8px;
+    min-height: 30px;
 }
 
 .main-content-mentors-list-instructor-image-mask{
